# rust_nn_gpt

./: Cargo.toml  README.md
.github/workflows/: hugging_face.yml  rust.yaml
model/: config.json
rust_nn_gpt/: Cargo.toml
rust_nn_gpt/src/: dataset.rs  lib.rs  tokenizer.rs
rust_nn_gpt/src/transformer/: block.rs  mla_attention.rs  mod.rs  moe.rs
tiny_shakespeare/: Cargo.toml
tiny_shakespeare/src/: main.rs
wgpu_wrapper/: Cargo.toml  build.rs
wgpu_wrapper/src/: lib.rs
wgpu_wrapper/src/shaders/: test.wgsl
