[package]
name = "rust_nn_gpt"
version = "0.1.0"
edition = "2024"

[dependencies]
tch = { version = "0.22", features = [ "download-libtorch" ] }
pollster = "0.4"
tokio = { version = "1.48", features = ["macros", "rt"] }
bytemuck = "1.14"
futures-intrusive = "0.5"
tiktoken-rs = "0.7"
better_default = "1.0"
safetensors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
